# rust-ec-tutorial

./: .env  .gitignore  Cargo.toml  README.md  run-integration-tests.sh  rust_ec_tutorial.md
.github/workflows/: ci.yml
etc/docker/: docker-compose.yml  init-db.sql
integration-tests/: Cargo.toml
integration-tests/src/: main.rs
inventory/: .env  Cargo.toml
inventory/db/migrations/: 20260112134000_create_inventories_table.sql
inventory/src/: main.rs
inventory/src/controller/: inventory_controller.rs
inventory/src/datasource/: mod.rs
inventory/src/datasource/inventory/: inventory_record.rs  inventory_repository_db.rs  mod.rs
inventory/src/datasource/kafka/: kafka_consumer.rs  kafka_publisher.rs  mod.rs
inventory/src/domain/: mod.rs
inventory/src/domain/inventory/: inventory.rs  inventory_error.rs  mod.rs
inventory/src/domain/inventory/event/: inventory_event.rs  mod.rs
inventory/src/domain/order/event/: mod.rs  order_event.rs
inventory/src/domain/payment/event/: mod.rs  payment_event.rs
inventory/src/domain/product/: mod.rs  product_id.rs
inventory/src/service/: inventory_repository.rs  inventory_service.rs  mod.rs
order/: .env  Cargo.toml
order/db/migrations/: 20260112134000_create_inventories_table.sql  20260112140000_create_payments_table.sql
order/migrations/: 20251214134000_create_orders_table.sql
order/src/: main.rs
order/src/controller/: mod.rs  order_controller.rs  order_controller_test.rs
order/src/controller/request/: mod.rs  order_request.rs
order/src/controller/response/: mod.rs  order_response.rs
order/src/datasource/: connection_pool.rs  mod.rs  order_repository_db.rs
order/src/datasource/kafka/: kafka_publisher.rs  mod.rs  order_event_consumer.rs
order/src/datasource/order/: mod.rs  order_record.rs  order_repository_db.rs  order_repository_db_test.rs
order/src/domain/customer/: customer_id.rs  mod.rs
order/src/domain/order/: mod.rs  order.rs  order_error.rs  order_id.rs  order_status.rs  order_test.rs
order/src/domain/order/event/: mod.rs  order_event.rs
order/src/domain/product/: mod.rs  product.rs  product_id.rs
order/src/service/: event_publisher.rs  mod.rs  order_repository.rs  order_service.rs  order_service_test.rs
payment/: Cargo.toml
payment/src/: main.rs
payment/src/controller/: mod.rs  payment_controller.rs
payment/src/datasource/: mod.rs  payment_gateway_impl.rs  payment_record.rs  payment_repository_db.rs
payment/src/datasource/kafka/: kafka_consumer.rs  kafka_event_publisher.rs  mod.rs
payment/src/domain/: mod.rs  payment.rs  payment_event.rs
payment/src/service/: mod.rs  payment_gateway.rs  payment_repository.rs  payment_service.rs
